--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,14 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-"http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+<!-- remove next line if your web server adds charset-->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="global/style/layout.css" type="text/css" media="all" />
+<link rel="stylesheet" href="global/style/print.css" type="text/css" media="print" />
+<link rel="Shortcut Icon" href="http://www.cam.ac.uk/templates/favicon.ico" />
+<!--[if IE 6]><link rel="stylesheet" href="global/style/ie6.css" type="text/css" media="screen" /><script type="text/javascript" src="global/js/minmax.js"></script><![endif]-->
+<!--[if IE 7]><link rel="stylesheet" href="global/style/ie7.css" type="text/css" media="screen" /><![endif]-->
+<!-- change title and metadata for each page here -->
 <title>OPSIN: Open Parser for Structural IUPAC Nomenclature</title>
 <script src="/jquery-1.3.2.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -60,22 +67,73 @@
 	})
  });
 </script>
+<style type="text/css" media="all">
+  img.ucc-logo {
+    padding:0.9em 1em 0 1em;
+  }
+  div#content-primary img#depiction {
+    display: inline;
+    float: none;
+    border: 0;    
+  }
+  pre#cml {
+    max-width: 100%;
+    overflow: scroll;
+  }
+</style>
 </head>
-<body>
-<div>
+<body class="one-col">
+<div id="skip"> <a href="#skip-content" accesskey="2">Skip to content</a> </div>
+<div id="header">
+  <div id="branding"><a href="http://www.cam.ac.uk/" accesskey="1"><img src="global/images/identifier800.gif" alt="University of Cambridge" class="ucam" /></a><a href="http://www-ucc.ch.cam.ac.uk"><img src="global/ucc.png" alt="Unilever Centre for Molecular Science Informatics" class="ucc-logo" width="118" height="50" /></a></div>
+</div><!--- #header ends -->
+
+<div id="dept-title">
+  <h1>OPSIN</h1>
+  <h2>open parser for structural IUPAC nomenclature</h2>
+</div>
+
+<div id="container"> <a name="skip-content" id="skip-content"></a>
+<div id="content">
+
+<div id="content-primary">
+<ul id="nav-breadcrumb">
+  <li class="first"><a href="http://www.cam.ac.uk/">University of Cambridge</a></li>
+  <li><a href="http://www.ch.cam.ac.uk/">Department of Chemistry</a></li>
+  <li><a href="http://www-ucc.ch.cam.ac.uk/">Unilever Centre for Molecular Science Informatics</a></li>
+</ul>
+
+<div style="min-height: 360px">
+  <h3>Enter a chemical name into the box then click submit. If the name can be interpreted a depiction, SMILES and CML will be returned.</h3>
   <form action="" name="chemicalNameForm" id="chemicalNameForm">
-    <p>Enter a chemical name into the box then click submit. If the name can be interpreted a depiction, SMILES and CML will be returned.<br><input type="text" id="chemicalName" size="100" value="2,4,6-trinitrotoluene">
-    <input type="submit" value="Submit"><br>
-Updated 15/4/10. Now powered by the CDK<br> Note that this web interface is primarily for demonstration purposes.  Responsiveness and other issues will be addressed in the future.
-    </p>
+    <input type="text" id="chemicalName" size="100" value="2,4,6-trinitrotoluene">
+    <input type="submit" value="Submit">
   </form>
+  <p>Updated 15/4/10. Now powered by the CDK<br> Note that this web interface is primarily for demonstration purposes.  Responsiveness and other issues will be addressed in the future.</p>
+  
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt=""></p>
-    InChI: <p id="inchi"></p>
-    SMILES (No stereochemistry): <p id="smiles"></p>
-    CML: <pre id="cml"></pre>
+    <h3>InChI:</h3>
+    <p id="inchi"></p>
+    <h3>SMILES (No stereochemistry):</h3>
+    <p id="smiles"></p>
+    <h3>CML:</h3>
+    <pre id="cml"></pre>
   </div>
 
 </div>
+
+</div>
+<!-- end of #content-primary -->
+
+</div>
+<!-- end of #content -->
+
+<ul id="site-info">
+  <li class="copy">&copy; 2009-2010 Daniel Lowe, Unilever Centre for Molecular Science Informatics</li>
+  <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
+  <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
+</ul>
+
 </body>
 </html>
