--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 <!--[if IE 6]><link rel="stylesheet" href="global/style/ie6.css" type="text/css" media="screen" /><script type="text/javascript" src="global/js/minmax.js"></script><![endif]-->
 <!--[if IE 7]><link rel="stylesheet" href="global/style/ie7.css" type="text/css" media="screen" /><![endif]-->
 <!-- change title and metadata for each page here -->
-<title>OPSIN: Open Parser for Structural IUPAC Nomenclature</title>
+<title>OPSIN: Open Parser for Systematic IUPAC Nomenclature</title>
 <script src="/jquery-1.3.2.js" type="text/javascript"></script>
 <script type="text/javascript">
  $(document).ready(function() {
@@ -85,12 +85,12 @@
 <body class="one-col">
 <div id="skip"> <a href="#skip-content" accesskey="2">Skip to content</a> </div>
 <div id="header">
-  <div id="branding"><a href="http://www.cam.ac.uk/" accesskey="1"><img src="global/images/identifier800.gif" alt="University of Cambridge" class="ucam" /></a><a href="http://www-ucc.ch.cam.ac.uk"><img src="global/ucc.png" alt="Unilever Centre for Molecular Science Informatics" class="ucc-logo" width="118" height="50" /></a></div>
+  <div id="branding"><a href="http://www.cam.ac.uk/" accesskey="1"><img src="global/images/identifier4.gif" alt="University of Cambridge" class="ucam" /></a><a href="http://www-ucc.ch.cam.ac.uk"><img src="global/ucc.png" alt="Unilever Centre for Molecular Science Informatics" class="ucc-logo" width="118" height="50" /></a></div>
 </div><!--- #header ends -->
 
 <div id="dept-title">
   <h1>OPSIN</h1>
-  <h2>open parser for structural IUPAC nomenclature</h2>
+  <h2>Open Parser for Systematic IUPAC nomenclature</h2>
 </div>
 
 <div id="container"> <a name="skip-content" id="skip-content"></a>
@@ -105,14 +105,15 @@
 
 <div style="min-height: 360px">
   <h3>Enter a chemical name into the box then click submit. If the name can be interpreted a depiction, SMILES and CML will be returned.</h3>
-  <form action="" name="chemicalNameForm" id="chemicalNameForm">
-    <input type="text" id="chemicalName" size="100" value="2,4,6-trinitrotoluene">
-    <input type="submit" value="Submit">
+  <form action="" id="chemicalNameForm">
+    <fieldset>
+      <input type="text" id="chemicalName" size="100" value="2,4,6-trinitrotoluene" />
+      <input type="submit" value="Submit" />
+    </fieldset>
   </form>
-  <p>Updated 15/4/10. Now powered by the CDK<br> Note that this web interface is primarily for demonstration purposes.  Responsiveness and other issues will be addressed in the future.</p>
-  
+  <p>Updated 4/5/10: Added support for conjunctive nomenclature<br/> Depiction and SMILES courtesy of the CDK. Note that this web interface is primarily for demonstration purposes. Responsiveness and other issues will be addressed in the future.</p>
   <div id="results" style="display:none">
-    <p><img id="depiction" src="" alt=""></p>
+    <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
     <p id="inchi"></p>
     <h3>SMILES (No stereochemistry):</h3>
@@ -128,6 +129,9 @@
 
 </div>
 <!-- end of #content -->
+
+</div>
+<!-- end of #container -->
 
 <ul id="site-info">
   <li class="copy">&copy; 2009-2010 Daniel Lowe, Unilever Centre for Molecular Science Informatics</li>
