--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
 <!--[if IE 6]><link rel="stylesheet" href="global/style/ie6.css" type="text/css" media="screen" /><script type="text/javascript" src="global/js/minmax.js"></script><![endif]-->
 <!--[if IE 7]><link rel="stylesheet" href="global/style/ie7.css" type="text/css" media="screen" /><![endif]-->
 <!-- change title and metadata for each page here -->
+<link rel="stylesheet" href="opsin.css" type="text/css" media="all" />
 <title>OPSIN: Open Parser for Systematic IUPAC Nomenclature</title>
 <script src="/jquery-1.3.2.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -22,7 +23,7 @@
     var chemicalName = $("#chemicalName").val();
 		$.ajax({
       beforeSend: function(req) {
-        req.setRequestHeader("Accept", "chemical/x-cml");
+        req.setRequestHeader("Accept", "chemical/x-no2d-cml");
       },
       dataType: "text",
       type: "GET",
@@ -68,9 +69,6 @@
  });
 </script>
 <style type="text/css" media="all">
-  img.ucc-logo {
-    padding:0.9em 1em 0 1em;
-  }
   div#content-primary img#depiction {
     display: inline;
     float: none;
@@ -80,17 +78,19 @@
     max-width: 100%;
     overflow: scroll;
   }
+  span#last-update {
+    font-weight: bold; 
+  }
 </style>
 </head>
-<body class="one-col">
+<body class="home">
 <div id="skip"> <a href="#skip-content" accesskey="2">Skip to content</a> </div>
 <div id="header">
   <div id="branding"><a href="http://www.cam.ac.uk/" accesskey="1"><img src="global/images/identifier4.gif" alt="University of Cambridge" class="ucam" /></a><a href="http://www-ucc.ch.cam.ac.uk"><img src="global/ucc.png" alt="Unilever Centre for Molecular Science Informatics" class="ucc-logo" width="118" height="50" /></a></div>
 </div><!--- #header ends -->
 
 <div id="dept-title">
-  <h1>OPSIN</h1>
-  <h2>Open Parser for Systematic IUPAC nomenclature</h2>
+  <h1>OPSIN: Open Parser for Systematic IUPAC nomenclature</h1>
 </div>
 
 <div id="container"> <a name="skip-content" id="skip-content"></a>
@@ -111,7 +111,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p>Updated 4/5/10: Added support for conjunctive nomenclature<br/> Depiction and SMILES courtesy of the CDK. Note that this web interface is primarily for demonstration purposes. Responsiveness and other issues will be addressed in the future.</p>
+  <p><span id="last-update">Updated 18/5/10: Many misc minor improvements + some CAS index name nomenclature is now supported</span><br/> Depiction and SMILES courtesy of the CDK. Note that this web interface is primarily for demonstration purposes. Responsiveness and other issues will be addressed in the future.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
@@ -127,11 +127,23 @@
 </div>
 <!-- end of #content-primary -->
 
+<div id="content-secondary">
+  <dl class="links">
+    <dt>Links</dt>
+    <dd><a href="index.html">Web Interface</a></dd>
+    <dd><a href="instructions.html">Instructions</a></dd>
+    <dd><a href="information.html">Information</a></dd>
+    <dd><a href="getinvolved.html">Get Involved</a></dd>
+    <dd><a href="http://bitbucket.org/dan2097/opsin/">BitBucket Project</a></dd>
+    <dd><a href="http://bitbucket.org/dan2097/opsin/downloads">Downloads</a></dd>
+  </dl>
+</div>
+
 </div>
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2010 Daniel Lowe, Unilever Centre for Molecular Science Informatics</li>
+  <li class="copy">&copy; 2009-2010 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
   <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
   <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
 </ul>
