Corrected a couple of typos

--- a/src/main/webapp/instructions.html
+++ b/src/main/webapp/instructions.html
@@ -47,7 +47,7 @@
   </ul>
   <p>For example <a href="http://opsin.ch.cam.ac.uk/opsin/cyclopropane.png">http://opsin.ch.cam.ac.uk/opsin/cyclopropane.png</a> yields a depiction of cyclopropane.</p>
   <h3>By content negotiation:</h3>
-  <p>The web servce is RESTful and will respond appropriately to requests with the appropriate MIME type. For your convenience the MIME types expected are:</p>
+  <p>The web service is RESTful and will respond appropriately to requests with the appropriate MIME type. For your convenience the MIME types expected are:</p>
   <ul>
     <li>chemical/x-cml for CML with 2d coordinates</li>
     <li>chemical/x-no2d-cml for CML without 2d coordinates</li>
@@ -69,7 +69,7 @@
   <ul>
     <li>A carat with bracketing e.g. N^(2)</li>
     <li>A carat e.g. N^2</li>
-    <li>Bracketting e.g. N(2)</li>
+    <li>Bracketing e.g. N(2)</li>
     <li>Using tildes e.g. N~2~</li>
   </ul>
   <p>Note that for locants OPSIN will be able to disambiguate that N2 means N^2 and 
