--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -191,7 +191,7 @@ DOI: <a href="http://dx.doi.org/10.1007/11875741_11">10.1007/11875741_11</a></p>
 <a href="http://jni-inchi.sourceforge.net/">JNI-InChI</a> is used to generate InChIs.
 Additionally for testing  <a href="http://www.junit.org/">JUnit</a> and <a href="http://mockito.org/">Mockito</a> are employed.
 The web interface is powered by <a href="http://www.restlet.org">Restlet</a> with the <a href="http://cdk.sourceforge.net/">Chemistry Development Kit</a>
-being used for 2D coordinarate generation, depiction and SMILES generation.</p>
+being used for 2D coordinate generation, depiction and SMILES generation.</p>
 
 <h3 id="license">License and Warranty</h3>
 <p>OPSIN is licensed under the <a href="http://www.opensource.org/licenses/artistic-license-2.0.php">Artistic License v2.0</a></p>
