Allowed head requests Updated web site text

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -111,7 +111,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 18/5/10: Many misc minor improvements + some CAS index name nomenclature is now supported</span><br/> Depiction and SMILES courtesy of the CDK. Note that this web interface is primarily for demonstration purposes. Responsiveness and other issues will be addressed in the future.</p>
+  <p><span id="last-update">Updated 31/5/10: Many bug fixes/added more IUPAC retained names/Added support for spirobi and spiroter</span><br/> Depiction and SMILES courtesy of the CDK. Note that this web interface is primarily for demonstration purposes. Responsiveness and other issues will be addressed in the future.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
