--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <!-- change title and metadata for each page here -->
 <link rel="stylesheet" href="opsin.css" type="text/css" media="all" />
 <title>OPSIN: Open Parser for Systematic IUPAC Nomenclature</title>
-<script src="/jquery-1.3.2.js" type="text/javascript"></script>
+<script src="jquery-1.3.2.js" type="text/javascript"></script>
 <script type="text/javascript">
  $(document).ready(function() {
 	$("#chemicalNameForm").submit(function(e) {
@@ -32,7 +32,7 @@
         $("#cml").text(cml);
       },
       error: function(XMLHttpRequest, textStatus, errorThrown){
-        $("#cml").text(XMLHttpRequest.statusText);
+        $("#cml").text(extractResponseText(XMLHttpRequest.responseText));
       }
 		} );
 		$.ajax({
@@ -46,7 +46,7 @@
         $("#inchi").text(inchi);
       },
       error: function(XMLHttpRequest, textStatus, errorThrown){
-        $("#inchi").text(XMLHttpRequest.statusText);
+        $("#inchi").text(extractResponseText(XMLHttpRequest.responseText));
       }
 		} );
 		$.ajax({
@@ -60,13 +60,25 @@
         $("#smiles").text(smiles);
       },
       error: function(XMLHttpRequest, textStatus, errorThrown){
-        $("#smiles").text(XMLHttpRequest.statusText);
+        $("#smiles").text(extractResponseText(XMLHttpRequest.responseText));
       }
 		} );
     $("#depiction").attr("src", "/opsin/" +chemicalName +".png");
     return false;
 	})
  });
+
+	var re = new RegExp('<h3>(.*)</h3>');
+
+	function extractResponseText(responseHTML) {
+			var matcher = re.exec(responseHTML);
+			if (matcher !=null){
+					return matcher[1];
+			}
+			else{
+					return "Problem retrieving server error message! Is this server running?";
+			}
+	}
 </script>
 <style type="text/css" media="all">
   div#content-primary img#depiction {
@@ -111,7 +123,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 2/6/10: Web interface now outputs OPSIN error messages. Added support for dispiroter</span><br/> Depiction and SMILES courtesy of the CDK. Note that this web interface is primarily for demonstration purposes. Responsiveness and other issues will be addressed in the future.</p>
+  <p><span id="last-update">Updated 3/6/10: Web interface NOW outputs OPSIN error messages. Further improvements in support for spiro systems</span><br/> Depiction and SMILES courtesy of the CDK. Note that this web interface is primarily for demonstration purposes. Responsiveness and other issues will be addressed in the future.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
