--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,74 +12,7 @@
 <link rel="stylesheet" href="opsin.css" type="text/css" media="all" />
 <title>OPSIN: Open Parser for Systematic IUPAC Nomenclature</title>
 <script src="jquery-1.3.2.js" type="text/javascript"></script>
-<script type="text/javascript">
- $(document).ready(function() {
-	$("#chemicalNameForm").submit(function(e) {
-    document.getElementById("results").style.display="";
-    $("#cml").text("");
-    $("#inchi").text("");
-    $("#smiles").text("");
-    $("#depiction").attr("src", "");
-    var chemicalName = $("#chemicalName").val();
-		$.ajax({
-      beforeSend: function(req) {
-        req.setRequestHeader("Accept", "chemical/x-no2d-cml");
-      },
-      dataType: "text",
-      type: "GET",
-      url: "/opsin/" +chemicalName,
-      success: function(cml){
-        $("#cml").text(cml);
-      },
-      error: function(XMLHttpRequest, textStatus, errorThrown){
-        $("#cml").text(extractResponseText(XMLHttpRequest.responseText));
-      }
-		} );
-		$.ajax({
-      beforeSend: function(req) {
-        req.setRequestHeader("Accept", "chemical/x-inchi");
-      },
-      dataType: "text",
-      type: "GET",
-      url: "/opsin/" +chemicalName,
-      success: function(inchi){
-        $("#inchi").text(inchi);
-      },
-      error: function(XMLHttpRequest, textStatus, errorThrown){
-        $("#inchi").text(extractResponseText(XMLHttpRequest.responseText));
-      }
-		} );
-		$.ajax({
-      beforeSend: function(req) {
-        req.setRequestHeader("Accept", "chemical/x-daylight-smiles");
-      },
-      dataType: "text",
-      type: "GET",
-      url: "/opsin/" +chemicalName,
-      success: function(smiles){
-        $("#smiles").text(smiles);
-      },
-      error: function(XMLHttpRequest, textStatus, errorThrown){
-        $("#smiles").text(extractResponseText(XMLHttpRequest.responseText));
-      }
-		} );
-    $("#depiction").attr("src", "/opsin/" +chemicalName +".png");
-    return false;
-	})
- });
-
-	var re = new RegExp('<h3>(.*)</h3>');
-
-	function extractResponseText(responseHTML) {
-			var matcher = re.exec(responseHTML);
-			if (matcher !=null){
-					return matcher[1];
-			}
-			else{
-					return "Problem retrieving server error message! Is this server running?";
-			}
-	}
-</script>
+<script src="opsin.js" type="text/javascript"></script>
 <style type="text/css" media="all">
   div#content-primary img#depiction {
     display: inline;
@@ -123,7 +56,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 3/6/10: Web interface NOW outputs OPSIN error messages. Further improvements in support for spiro systems</span><br/> Depiction and SMILES courtesy of the CDK. Note that this web interface is primarily for demonstration purposes. Responsiveness and other issues will be addressed in the future.</p>
+  <p><span id="last-update">Updated 9/6/10: Based on the just released OPSIN 0.7.0</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
