--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -84,75 +84,93 @@ table#supported-nomenclature td {
   </thead>
   <tr>
     <td>Alk/ane/ene/yne</td>
-    <td>hexane, hex-1-ene, hex-1-yne</td>
+    <td><a href="../opsin/hexane.png">hexane</a><br/><a href="../opsin/hex-1-ene.png">hex-1-ene</a><br/><a href="../opsin/hex-1-yne.png">hex-1-yne</a></td>
   </tr>
   <tr>
     <td>Heteroatom chains</td>
-    <td>tetrasilane, tetrasiloxane</td>
+    <td><a href="../opsin/tetrasilane.png">tetrasilane</a><br/><a href="../opsin/tetrasiloxane.png">tetrasiloxane</a></td>
   </tr>
   <tr>
     <td>Cyclised chains</td>
-    <td>cyclohexane, cyclotriborazane</td>
+    <td><a href="../opsin/cyclohexane.png">cyclohexane</a><br/><a href="../opsin/cyclotriborazane.png">cyclotriborazane</a></td>
   </tr>
   <tr>
     <td>Trivial acids and derivatives</td>
-    <td>maleic acid, maleamic acid, maleamide, maleimide</td>
+    <td><a href="../opsin/maleic%20acid.png">maleic acid</a><br/><a href="../opsin/maleamic%20acid.png">maleamic acid</a><br/>
+		<a href="../opsin/maleamide.png">maleamide</a><br/><a href="../opsin/maleimide.png">maleimide</a></td>
   </tr>
   <tr>
     <td>Hantzsch-Widman rings</td>
-    <td>1,3-oxazole</td>
+    <td><a href="../opsin/1%2C3-oxazole.png">1,3-oxazole</a></td>
   </tr>
   <tr>
-    <td>Mono cyclic spiro compounds</td>
-    <td>spiro[4.5]decane, pentaspiro[2.0.2<sup>4</sup>.1.1.2<sup>10</sup>.0.2<sup>13</sup>.1<sup>8</sup>.2<sup>3</sup>]octadecane</td>
+    <td>Spiro compounds</td>
+    <td>
+			<a href="../opsin/spiro%5B4.5%5Ddecane.png">spiro[4.5]decane</a><br/>
+			<a href="../opsin/pentaspiro%5B2.0.2%5E4.1.1.2%5E10.0.2%5E13.1%5E8.2%5E3%5Doctadecane.png">pentaspiro[2.0.2<sup>4</sup>.1.1.2<sup>10</sup>.0.2<sup>13</sup>.1<sup>8</sup>.2<sup>3</sup>]octadecane</a><br/>
+			<a href="../opsin/1H%2C1'H-2%2C2'-spirobi%5Bnaphthalene%5D.png">1H,1'H-2,2'-spirobi[naphthalene]</a><br/>
+			<a href="../opsin/2λ6%2C2'%2C2''-spiroter%5B%5B1%2C3%2C2%5Dbenzodioxathiole%5D.png">2λ6,2',2''-spiroter[[1,3,2]benzodioxathiole]</a><br/>
+			<a href="../opsin/1'H%2C1''H%2C2H%2C8'H-1%2C2':7'%2C2''-dispiroter%5Bnaphthalen%5D-1'-one.png">1'H,1''H,2H,8'H-1,2':7',2''-dispiroter[naphthalen]-1'-one</a><br/>
+			<a href="../opsin/spiro%5B1%2C2-benzodithiole-3%2C2'-%5B1%2C3%5Dbenzodithiole%5D.png">spiro[1,2-benzodithiole-3,2'-[1,3]benzodithiole]</a>
+		</td>
   </tr>
   <tr>
     <td>von Baeyer systems</td>
-    <td>pentacyclo[13.7.4.3<sup>3,8</sup>.0<sup>18,20</sup>.1<sup>13,28</sup>]triacontane</td>
+		<td><a href="../opsin/pentacyclo%5B13.7.4.3%5E3%2C8.0%5E18%2C20.1%5E13%2C28%5Dtriacontane.png">pentacyclo[13.7.4.3<sup>3,8</sup>.0<sup>18,20</sup>.1<sup>13,28</sup>]triacontane</a></td>
   </tr>
   <tr>
     <td>Hydro/dehydro</td>
-    <td>2,3-dihydropyridine, 1,2-didehydrobenzene</td>
+    <td><a href="../opsin/2%2C3-dihydropyridine.png">2,3-dihydropyridine</a><br/><a href="../opsin/1%2C2-didehydrobenzene.png">1,2-didehydrobenzene</a></td>
   </tr>
   <tr>
     <td>Indicated hydrogen</td>
-    <td>1H-benzoimidazole</td>
+    <td><a href="../opsin/1H-benzoimidazole.png">1H-benzoimidazole</a><br/><a href="../opsin/phosphinin-2(1H)-one.png">phosphinin-2(1H)-one</a></td>
   </tr>
   <tr>
     <td>Heteroatom replacement</td>
-    <td>3-aza-pentane</td>
+    <td>
+				<a href="../opsin/3-aza-pentane.png">3-aza-pentane</a><br/><a href="../opsin/3-azonia-pentane.png">3-azonia-pentane</a><br/>
+				<a href="../opsin/3-azanylia-pentane.png">3-azanylia-pentane</a><br/><a href="../opsin/3-azanida-pentane.png">3-azanida-pentane</a><br/>
+				<a href="../opsin/3-azanuida-pentane.png">3-azanuida-pentane</a>
+		</td>
   </tr>
   <tr>
     <td>Specification of charge: ium/ide/ylium/uide</td>
-    <td>azanium, boranuide</td>
+    <td><a href="../opsin/azanium.png">azanium</a><br/><a href="../opsin/boranuide.png">boranuide</a></td>
   </tr>
   <tr>
     <td>Multiplicative nomenclature</td>
-    <td>ethylenediaminetetraacetic acid</td>
+    <td>
+				<a href="../opsin/ethylenediaminetetraacetic%20acid.png">ethylenediaminetetraacetic acid</a><br/>
+				<a href="../opsin/3%2C3'-%5Bethane-1%2C2-diylbis(oxy)%5Dbis%7B4-%5B2-(furan-3-yloxy)ethoxy%5Dfuran%7D.png">3,3'-[ethane-1,2-diylbis(oxy)]bis{4-[2-(furan-3-yloxy)ethoxy]furan}</a>
+		</td>
   </tr>
   <tr>
     <td>Conjunctive nomenclature</td>
-    <td>1,3,5-benzenetriacetic acid</td>
+    <td><a href="../opsin/1%2C3%2C5-benzenetriacetic%20acid.png">1,3,5-benzenetriacetic acid</a></td>
   </tr>
   <tr>
     <td>Fused ring systems*</td>
-    <td>imidazo[4,5-d]pyridine, phenothiazino[3',4':5,6][1,4]oxazino[2,3-i]benzo[5,6][1,4]thiazino[3,2-c]phenoxazine</td>
+    <td>
+				<a href="../opsin/imidazo%5B4%2C5-d%5Dpyridine.png">imidazo[4,5-d]pyridine</a><br/>
+				<a href="../opsin/phenothiazino%5B3'%2C4':5%2C6%5D%5B1%2C4%5Doxazino%5B2%2C3-i%5Dbenzo%5B5%2C6%5D%5B1%2C4%5Dthiazino%5B3%2C2-c%5Dphenoxazine.png">phenothiazino[3',4':5,6][1,4]oxazino[2,3-i]benzo[5,6][1,4]thiazino[3,2-c]phenoxazine</a>
+		</td>
   </tr>
   <tr>
     <td>Ring assemblies</td>
-    <td>biphenyl, 2,2':6',2''-terpyridine</td>
+    <td><a href="../opsin/biphenyl.png">biphenyl</a><br/><a href="../opsin/2%2C2':6'%2C2''-terpyridine.png">2,2':6',2''-terpyridine</a></td>
   </tr>
   <tr>
     <td>Prefix functional replacement</td>
-    <td>peroxybenzoic acid</td>
+    <td><a href="../opsin/peroxybenzoic%20acid.png">peroxybenzoic acid</a></td>
   </tr>
   <tr>
     <td>Infix functional replacement</td>
-    <td>benzoperoxoic acid</td>
+    <td><a href="../opsin/benzoperoxoic%20acid.png">benzoperoxoic acid</a></td>
   </tr>
   <tr>
     <td>Lambda convention</td>
-    <td>λ5-phosphane</td>
+    <td><a href="../opsin/λ5-phosphane.png">λ5-phosphane</a></td>
   </tr>
   <tr>
     <td>Radicofunctional nomenclature</td>
@@ -162,7 +180,10 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
   </tr>
   <tr>
     <td>Amino Acids and derivatives</td>
-    <td>glycinol, L-alanyl-L-glutaminyl-L-arginyl-O-phosphono-L-seryl-L-alanyl-L-proline</td>
+    <td>
+				<a href="../opsin/glycinol.png">glycinol</a><br/>
+				<a href="../opsin/L-alanyl-L-glutaminyl-L-arginyl-O-phosphono-L-seryl-L-alanyl-L-proline.png">L-alanyl-L-glutaminyl-L-arginyl-O-phosphono-L-seryl-L-alanyl-L-proline</a>
+		</td>
   </tr>
   <tr>
     <td>R/S stereochemistry</td>
@@ -170,7 +191,7 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
   </tr>
   <tr>
     <td>E/Z stereochemistry</td>
-    <td>(2Z)-but-2-ene</td>
+		<td>(2Z)-but-2-ene</td>
   </tr>
   <tr>
     <td>Structure-based polymer names</td>
