Added prettier error screen The method for doing this is a bit tacky and should be refined...

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,7 +56,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 30/6/10: Bug fixes, new CIP algorithm and added support for a few more functional classes e.g. diketone, disulfone</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
+  <p><span id="last-update">Updated 16/7/10: Based on the just released v0.8.0</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
