chemicalName is now explicitly url encoded Added a few examples demonstrating newly supported chemical name types Port number is now indicated when server is started directly Updated news

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,7 +56,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 7/10/10: Improved support for: bridged fused rings, very long alkanes, methylenedioxy, ortho/meta/para, prefix functional replacement, metals. Plus many bug fixes and minor improvements</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
+  <p><span id="last-update">Updated 18/10/10: Added support for nucleoside/nucleotide phosphates. Commas may now be used instead of periods in von Baeyer brackets</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
