--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -109,7 +109,7 @@ table#supported-nomenclature td {
 			<a href="../opsin/spiro%5B4.5%5Ddecane.png">spiro[4.5]decane</a><br/>
 			<a href="../opsin/pentaspiro%5B2.0.2%5E4.1.1.2%5E10.0.2%5E13.1%5E8.2%5E3%5Doctadecane.png">pentaspiro[2.0.2<sup>4</sup>.1.1.2<sup>10</sup>.0.2<sup>13</sup>.1<sup>8</sup>.2<sup>3</sup>]octadecane</a><br/>
 			<a href="../opsin/1H%2C1'H-2%2C2'-spirobi%5Bnaphthalene%5D.png">1H,1'H-2,2'-spirobi[naphthalene]</a><br/>
-			<a href="../opsin/2λ6%2C2'%2C2''-spiroter%5B%5B1%2C3%2C2%5Dbenzodioxathiole%5D.png">2λ6,2',2''-spiroter[[1,3,2]benzodioxathiole]</a><br/>
+			<a href="../opsin/2%CE%BB6%2C2'%2C2''-spiroter%5B%5B1%2C3%2C2%5Dbenzodioxathiole%5D.png">2λ6,2',2''-spiroter[[1,3,2]benzodioxathiole]</a><br/>
 			<a href="../opsin/1'H%2C1''H%2C2H%2C8'H-1%2C2':7'%2C2''-dispiroter%5Bnaphthalen%5D-1'-one.png">1'H,1''H,2H,8'H-1,2':7',2''-dispiroter[naphthalen]-1'-one</a><br/>
 			<a href="../opsin/spiro%5B1%2C2-benzodithiole-3%2C2'-%5B1%2C3%5Dbenzodithiole%5D.png">spiro[1,2-benzodithiole-3,2'-[1,3]benzodithiole]</a>
 		</td>
@@ -157,6 +157,14 @@ table#supported-nomenclature td {
 		</td>
   </tr>
   <tr>
+    <td>Simple bridges</td>
+    <td>
+				<a href="../opsin/2%2C3-methanoindene.png">2,3-methanoindene</a><br/>
+				<a href="../opsin/3%2C4-methylenedioxy-%CE%B2-methoxyphenethylamine.png">3,4-methylenedioxy-β-methoxyphenethylamine</a><br/>
+				<a href="../opsin/3%2C4-epoxy-3%2C4-dihydrophenanthrene.png">3,4-epoxy-3,4-dihydrophenanthrene</a>
+		</td>
+  </tr>
+  <tr>
     <td>Ring assemblies</td>
     <td><a href="../opsin/biphenyl.png">biphenyl</a><br/><a href="../opsin/2%2C2':6'%2C2''-terpyridine.png">2,2':6',2''-terpyridine</a></td>
   </tr>
@@ -170,7 +178,7 @@ table#supported-nomenclature td {
   </tr>
   <tr>
     <td>Lambda convention</td>
-    <td><a href="../opsin/λ5-phosphane.png">λ5-phosphane</a></td>
+    <td><a href="../opsin/%CE%BB5-phosphane.png">λ5-phosphane</a></td>
   </tr>
   <tr>
     <td>Radicofunctional nomenclature</td>
@@ -183,6 +191,19 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
     <td>
 				<a href="../opsin/glycinol.png">glycinol</a><br/>
 				<a href="../opsin/L-alanyl-L-glutaminyl-L-arginyl-O-phosphono-L-seryl-L-alanyl-L-proline.png">L-alanyl-L-glutaminyl-L-arginyl-O-phosphono-L-seryl-L-alanyl-L-proline</a>
+		</td>
+  </tr>
+  <tr>
+    <td>Nucleosides, nucleotides and esters of</td>
+    <td>
+				<a href="../opsin/adenosine%205'-(tetrahydrogen%20triphosphate).png">adenosine 5'-(tetrahydrogen triphosphate)</a>
+		</td>
+  </tr>
+  <tr>
+    <td>Basic inorganic support</td>
+    <td>
+				<a href="../opsin/alumininum(3%2B)%20chloride.png">alumininum(3+) chloride</a><br/>
+				<a href="../opsin/mercury(II)%20chloride.png">mercury(II) chloride</a>
 		</td>
   </tr>
   <tr>
