Added detailed failure analysis for when OPSIN fails during parsing. This relies on the absolute latest version of OPSIN

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,7 +56,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 18/10/10: Added support for nucleoside/nucleotide phosphates. Commas may now be used instead of periods in von Baeyer brackets</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
+  <p><span id="last-update">Updated 30/11/10: Improved error message given when parsing fails e.g. 1-chloro-4-unknownylbenzene will now indicate that "4-unknownyl" is uninterpretable specifically the string "unknown". Minor bug fixes</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
