--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -194,7 +194,7 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
 		</td>
   </tr>
   <tr>
-    <td>Nucleosides, nucleotides and esters of</td>
+    <td>Nucleosides, nucleotides and their esters</td>
     <td>
 				<a href="../opsin/adenosine%205'-(tetrahydrogen%20triphosphate).png">adenosine 5'-(tetrahydrogen triphosphate)</a>
 		</td>
@@ -202,7 +202,7 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
   <tr>
     <td>Basic inorganic support</td>
     <td>
-				<a href="../opsin/alumininum(3%2B)%20chloride.png">alumininum(3+) chloride</a><br/>
+				<a href="../opsin/aluminium(3%2B)%20chloride.png">aluminium(3+) chloride</a><br/>
 				<a href="../opsin/mercury(II)%20chloride.png">mercury(II) chloride</a>
 		</td>
   </tr>
