Web service is no longer using the deprecated createRoot() method and should now definitely initialise OPSIN when starting Updated instructions.html to include mention of improved support for greeks

--- a/src/main/webapp/instructions.html
+++ b/src/main/webapp/instructions.html
@@ -62,6 +62,7 @@
   <ul>
     <li>The appropriate UTF-8 character e.g. λ</li>
     <li>The romanised name for the letter e.g. lambda</li>
+		<li>The romanised name for the letter surrounded by dots e.g. .lambda.</li>
     <li>The corresponding modern letter prefixed with a dollar e.g. $l</li>
   </ul>
   <h3>Super scripts</h3>
